--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,95 @@
-version: '3.3'
+version: "3.4"
 
 services:
-  # mavenbuildgtas:
+  redis:
+    image: redis
+    container_name: redis
+    ports:
+      - 6379:6379
+    networks:
+      - gtas_default
+  kibana:
+    image: kibana:6.5.4
+    container_name: kibana
+    ports:
+      - 5601:5601
+    networks: 
+      - gtas_default
+    depends_on:
+      - elasticsearch
+
+  elasticsearch:
+    image: elasticsearch:6.5.4
+    container_name: elasticsearch
+    networks: 
+      - gtas_default
+    ports: 
+      - 9300:9300
+      - 9200:9200
+    healthcheck:
+      test: curl --cacert /usr/share/elasticsearch/config/certs/ca/ca.crt -s https://localhost:9200 >/dev/null; if [[ $$? == 52 ]]; then echo 0; else echo 1; fi
+      interval: 30s
+      timeout: 10s
+      retries: 5
+  # logstash:
+  #   image: logstash:6.5.4
+  #   container_name: logstash
+  #   command: logstash -f /config/
   #   environment:
-  #     JDBC_URL: jdbc:mariadb://mariahost:3306/gtas?useUnicode=true&characterEncoding=UTF-8
-  #     JDBC_USER: root
-  #     JDBC_PASS: admin
-  #   build:
-  #     context: .
-  #     dockerfile: maven.Dockerfile
+  #     - JAVA_OPTS=-Xms1g -Xmx1g
   #   volumes:
-  #     - "./gtas-parent:/project"
-  #   links:
+  #     - $PWD/gtas-parent/scripts/elastic/install/docker/logstash/config:/config
+  #   networks:
+  #     - gtas_default
+  #   depends_on:
+  #     - elasticsearch
   #     - mariahost
+  activemq:
+    image: rmohr/activemq
+    container_name: activemq
+    ports:
+      - 61616:61616
+      - 8161:8161
+    networks: 
+      - gtas_default
 
   mariahost:
-    environment:
-      MYSQL_ROOT_PASSWORD: admin
-      MYSQL_DATABASE: gtas
     build:
-      context: ./gtas-parent/gtas-commons
+      context: ./docker
       dockerfile: db.Dockerfile
-    # volumes:
-       #- ./gtas-parent/gtas-commons/db:/var/lib/mysql
-      #  - "./gtas-parent/gtas-commons/target/:/docker-entrypoint-initdb.d"
-      #  - "./gtas-parent/gtas-commons/src/main/resources/sql:/docker-entrypoint-initdb.d"
     ports:
       - "3306:3306"
     container_name: mariahost
+    command: [
+            '--wait_timeout=28800',
+        ]
+    networks: 
+      - gtas_default
 
-  tomcatgtas:
-    links:
-      - mariahost
+  tomcathost:
+    container_name: tomcathost
     build:
       context: .
-      dockerfile: /gtas-parent/docker/tomcat.Dockerfile
-    # volumes:
-    #    #- ./gtas-parent/gtas-commons/db:/var/lib/mysql
-    #    - "./gtas-parent/gtas-webapp/target/gtas.war:/usr/local/tomcat/webapps/"
-    #    - "./gtas-parent/gtas-job-scheduler-war/target/gtas-job-scheduler.war:/usr/local/tomcat/webapps/"
+      dockerfile: ./docker/tomcat.Dockerfile
     ports:
-      - "8091:8080"
-    container_name: tomcat
+      - "8080:8080"
+    environment:
+      LOCAL_DRIVE_MAPPING_INPUT: ${LOCAL_DRIVE_MAPPING_INPUT}
+      LOCAL_DRIVE_MAPPING_OUTPUT: ${LOCAL_DRIVE_MAPPING_OUTPUT}
+    volumes:
+      - ${LOCAL_DRIVE_MAPPING_INPUT}:/usr/local/input:rw
+      - ${LOCAL_DRIVE_MAPPING_OUTPUT}:/usr/local/output:rw
+      # - ./gtas-parent/gtas-webapp/target/gtas.war:/usr/local/tomcat/webapps/gtas.war
+      # - ./gtas-parent/gtas-job-scheduler-war/target/gtas-job-scheduler.war:/usr/local/tomcat/webapps/gtas-job-scheduler.war
+    networks:
+      - gtas_default
+
+volumes:
+  es-data:
+    driver: local
+  redis-data:
+    driver: local
+  
+networks:
+  gtas_default:
+    
